--- a/index.html
+++ b/index.html
@@ -2,62 +2,60 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Smart City App</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 40px;
-      background-color: #f0f2f5;
-      text-align: center;
-    }
-    h1 {
-      color: #2c3e50;
-    }
-    button {
-      margin: 10px;
-      padding: 10px 25px;
-      font-size: 16px;
-      cursor: pointer;
-      border: none;
-      background-color: #3498db;
-      color: white;
-      border-radius: 6px;
-    }
-    button:hover {
-      background-color: #2980b9;
-    }
-    .output {
-      margin-top: 30px;
-      padding: 15px;
-      background: #fff;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 18px;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Login | Smart City App</title>
+  <link rel="stylesheet" href="login.css" />
 </head>
 <body>
-  <h1>Smart City Explorer</h1>
-  <p>Select a category:</p>
+  <div class="login-container">
+    <h2>Smart City Login</h2>
+    <form id="login-form">
+      <label for="email">Email</label>
+      <input type="email" id="email" placeholder="Enter your email" required />
+      <label for="password">Password</label>
+      <input type="password" id="password" placeholder="Enter your password" required />
+      <button type="submit">Login</button>
+      <p class="note">Don't have an account? <a href="signup.html">Sign up</a></p>
+    </form>
+    <p id="error-msg" style="color: red; margin-top: 10px;"></p>
+  </div>
 
-  <button onclick="showInfo(1)">Transport</button>
-  <button onclick="showInfo(2)">Hotels</button>
-  <button onclick="showInfo(3)">Markets</button>
-  <button onclick="showInfo(4)">Jobs</button>
-
-  <div class="output" id="output">Click a button to see details.</div>
-
+  <!-- Firebase SDK (compat version) -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-auth-compat.js"></script>
   <script>
-    function showInfo(choice) {
-      const info = {
-        1: "🚇 Metro every 10 mins, buses ₹10–50, use Ola/Uber.",
-        2: "🏨 Hotels: Comfort Inn, Green View, Grand Palace.",
-        3: "🛍️ Central Mall, Old City Market, Daily Mart.",
-        4: "💼 Visit Job Fair, use Naukri, LinkedIn, Indeed."
+    document.addEventListener("DOMContentLoaded", function () {
+      const firebaseConfig = {
+        apiKey: "AIzaSyCStWhNWez0NU85okfarLtd94fKo9sdfBY",
+        authDomain: "smart-city-app-78637.firebaseapp.com",
+        projectId: "smart-city-app-78637",
+        storageBucket: "smart-city-app-78637.appspot.com",
+        messagingSenderId: "148025701749",
+        appId: "1:148025701749:web:559b528b31540b4a548f3c",
+        measurementId: "G-M9B7VJPPB1"
       };
-      document.getElementById("output").innerText = info[choice] || "Please choose a valid option.";
-    }
+
+      firebase.initializeApp(firebaseConfig);
+      const auth = firebase.auth();
+
+      const loginForm = document.getElementById("login-form");
+      const errorMsg = document.getElementById("error-msg");
+
+      loginForm.addEventListener("submit", function (e) {
+        e.preventDefault();
+        const email = document.getElementById("email").value;
+        const password = document.getElementById("password").value;
+
+        auth.signInWithEmailAndPassword(email, password)
+          .then(() => {
+            errorMsg.textContent = "";
+            window.location.href = "dashboard.html";
+          })
+          .catch(error => {
+            errorMsg.textContent = "❌ " + error.message;
+          });
+      });
+    });
   </script>
 </body>
 </html>
