--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
       <label for="password">Password</label>
       <input type="password" id="password" placeholder="Create a password" required />
       <button type="submit">Sign Up</button>
-      <p class="note">Already have an account? <a href="login.html">Login here</a></p>
+      <p class="note">Already have an account? <a href="index.html">Login here</a></p>
     </form>
     <p id="error-msg" style="color: red; margin-top: 10px;"></p>
   </div>
@@ -48,7 +48,7 @@
 
     auth.createUserWithEmailAndPassword(email, password)
       .then(() => {
-        window.location.href = "login.html"; // ✅ redirect works now
+        window.location.href = "index.html"; // ✅ redirect works now
       })
       .catch(error => {
         document.getElementById("error-msg").textContent = "❌ " + error.message;
