--- a/index.html
+++ b/index.html
@@ -3,24 +3,85 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login | Smart City App</title>
-  <link rel="stylesheet" href="login.css" />
+  <title>Login Page</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="demo.css">
 </head>
-<body>
-  <div class="login-container">
-    <h2>Smart City Login</h2>
-    <form id="login-form">
-      <label for="email">Email</label>
-      <input type="email" id="email" placeholder="Enter your email" required />
-      <label for="password">Password</label>
-      <input type="password" id="password" placeholder="Enter your password" required />
-      <button type="submit">Login</button>
-      <p class="note">Don't have an account? <a href="signup.html">Sign up</a></p>
-    </form>
-    <p id="error-msg" style="color: red; margin-top: 10px;"></p>
+<body class="min-h-screen flex items-center justify-center bg-white text-black">
+
+  <div class="login-container bg-white rounded-2xl overflow-hidden shadow-lg w-full max-w-md">
+    <div class="relative h-48 bg-black flex items-center justify-center">
+      <div class="absolute inset-0 bg-white opacity-10"></div>
+      <div class="relative z-10 text-center px-6">
+        <h1 class="text-3xl font-bold text-white">Welcome Back</h1>
+        <p class="text-white opacity-90 mt-2">Sign in to your account</p>
+      </div>
+      <div class="absolute -bottom-6 left-1/2 transform -translate-x-1/2">
+        <div class="bg-white p-2 rounded-full shadow-lg">
+          <div class="bg-black w-16 h-16 rounded-full flex items-center justify-center text-white text-2xl">
+            <i class="fas fa-user"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="pt-12 pb-8 px-8">
+      <form id="login-form" class="space-y-6">
+        <div>
+          <label for="email" class="block text-sm font-medium text-black mb-1">Email Address</label>
+          <div class="relative">
+            <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+              <i class="fas fa-envelope text-gray-500"></i>
+            </div>
+            <input type="email" id="email" name="email" required
+              class="input-field pl-10 block w-full rounded-md border-gray-400 shadow-sm p-3 border bg-white text-black"
+              placeholder="Enter Your Email">
+          </div>
+        </div>
+
+        <div>
+          <label for="password" class="block text-sm font-medium text-black mb-1">Password</label>
+          <div class="relative">
+            <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+              <i class="fas fa-lock text-gray-500"></i>
+            </div>
+            <input type="password" id="password" name="password" required
+              class="input-field pl-10 block w-full rounded-md border-gray-400 shadow-sm p-3 border bg-white text-black"
+              placeholder="••••••••">
+            <div class="absolute inset-y-0 right-0 pr-3 flex items-center cursor-pointer" onclick="togglePassword()">
+              <i id="eyeIcon" class="fas fa-eye-slash text-gray-500"></i>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex items-center justify-between">
+          <div class="flex items-center">
+            <input id="remember-me" name="remember-me" type="checkbox"
+              class="h-4 w-4 rounded border-gray-400 text-black focus:ring-black">
+            <label for="remember-me" class="ml-2 block text-sm text-black">Remember me</label>
+          </div>
+        </div>
+
+        <div>
+          <button type="submit"
+            class="btn-login w-full flex justify-center py-3 px-4 rounded-md shadow-sm text-sm font-medium text-white bg-black">
+            Sign in
+          </button>
+        </div>
+        <p id="error-msg" class="text-sm text-red-600 text-center mt-2"></p>
+      </form>
+
+      <div class="mt-6 text-center">
+        <p class="text-sm text-gray-600">
+          Don't have an account?
+          <a href="signup.html" class="font-medium text-black underline hover:text-gray-800">Sign up</a>
+        </p>
+      </div>
+    </div>
   </div>
 
-  <!-- Firebase SDK (compat version) -->
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-auth-compat.js"></script>
   <script>
@@ -56,6 +117,20 @@
           });
       });
     });
+
+    function togglePassword() {
+      const password = document.getElementById("password");
+      const eyeIcon = document.getElementById("eyeIcon");
+      if (password.type === "password") {
+        password.type = "text";
+        eyeIcon.classList.remove("fa-eye-slash");
+        eyeIcon.classList.add("fa-eye");
+      } else {
+        password.type = "password";
+        eyeIcon.classList.remove("fa-eye");
+        eyeIcon.classList.add("fa-eye-slash");
+      }
+    }
   </script>
 </body>
 </html>
