--- a/dashboard.html
+++ b/dashboard.html
@@ -34,7 +34,7 @@
     <!-- Main Content -->
     <main class="main-content">
       <h1>Explore Your Smart City</h1>
-      <p class="subtitle">Discover travel, hotels, and shops in your city.</p>
+      <p class="subtitle">Discover travel, hotels, and shops across the globe.</p>
 
       <div class="button-group">
         <button onclick="window.location.href='travel.html'">Travel</button>
