--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <title>Login Page</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="demo.css">
+  <link rel="stylesheet" href="login.css">
 </head>
 <body class="min-h-screen flex items-center justify-center bg-white text-black">
 
-  <div class="login-container bg-white rounded-2xl overflow-hidden shadow-lg w-full max-w-md">
+  <div class="login-container floating bg-white rounded-2xl overflow-hidden shadow-lg w-full max-w-md">
+    
+
     <div class="relative h-48 bg-black flex items-center justify-center">
       <div class="absolute inset-0 bg-white opacity-10"></div>
       <div class="relative z-10 text-center px-6">
@@ -55,12 +57,18 @@
           </div>
         </div>
 
-        <div class="flex items-center justify-between">
-          <div class="flex items-center">
-            <input id="remember-me" name="remember-me" type="checkbox"
-              class="h-4 w-4 rounded border-gray-400 text-black focus:ring-black">
-            <label for="remember-me" class="ml-2 block text-sm text-black">Remember me</label>
-          </div>
+        <div class="flex items-center">
+  <div class="flex items-center">
+    <input id="remember-me" name="remember-me" type="checkbox"
+      class="h-4 w-4 rounded border-gray-400 text-black focus:ring-black">
+    <label for="remember-me" class="ml-2 block text-sm text-black">Remember me</label>
+  </div>
+  <a href="forget.html" class="ml-auto text-sm font-medium text-black underline hover:text-gray-800">
+    Forget password
+  </a>
+</div>
+
+
         </div>
 
         <div>
